# g4bx2

./: .directory  .gitignore  .rootrc  AmBeSource.mac  CMakeLists.txt  Doxyfile  Fast.mac  Geo2Surf.mac  Li9He8.mac  PostgreSQLConfig.cmake  README.txt  antineutrino.mac  g4bx2.cc  gun.mac  mainpage.h  multi.mac  neutrino_C13.mac  neutron.mac  ops.mac  please_source_me  rdm.mac  rdmchain.mac  scs.mac  snu.mac
data/CVS/: Entries  Repository
data/borex/: bx_pmtVeto.inp  bx_pmteff.inp  bx_pmtfile.inp
data/borex/CVS/: Entries  Repository
data/borex/relQE_ASCII/: relQE_2007_Aug_05.dat.hole  relQE_2007_Aug_12.dat.hole  relQE_2007_Aug_19.dat.hole  relQE_2007_Aug_26.dat.hole  relQE_2007_Dec_02.dat.hole  relQE_2007_Dec_09.dat.hole  relQE_2007_Dec_16.dat.hole  relQE_2007_Dec_30.dat.hole  relQE_2007_Jul_15.dat.hole  relQE_2007_Jul_22.dat.hole  relQE_2007_Jul_29.dat.hole  relQE_2007_Nov_04.dat.hole  relQE_2007_Nov_11.dat.hole  relQE_2007_Nov_18.dat.hole  relQE_2007_Nov_25.dat.hole  relQE_2007_Oct_07.dat.hole  relQE_2007_Oct_14.dat.hole  relQE_2007_Oct_21.dat.hole  relQE_2007_Oct_28.dat.hole  relQE_2007_Sep_02.dat.hole  relQE_2007_Sep_09.dat.hole  relQE_2007_Sep_16.dat.hole  relQE_2007_Sep_23.dat.hole  relQE_2007_Sep_30.dat.hole  relQE_2008_Apr_06.dat.hole  relQE_2008_Apr_13.dat.hole  relQE_2008_Apr_20.dat.hole  relQE_2008_Apr_27.dat.hole  relQE_2008_Dec_07.dat.hole  relQE_2008_Dec_14.dat.hole  relQE_2008_Dec_21.dat.hole  (+346 more)
data/dat/: File_CrossSection_Spectrum.root  Pr144Spectrum_and_crossSection_Feb2015_keV.root
include/: BxActionInitialization.hh  BxCerenkov.hh  BxChamberParameterization.hh  BxDataCollection.hh  BxDetectorConstruction.hh  BxDetectorConstructionMessenger.hh  BxEventAction.hh  BxEventActionMessenger.hh  BxG4BxReader.hh  BxGeneratorAmBeSource.hh  BxGeneratorAmBeSourceMessenger.hh  BxGeneratorAntiNeutrino.hh  BxGeneratorAntiNeutrinoMessenger.hh  BxGeneratorG4Gun.hh  BxGeneratorG4GunMessenger.hh  BxGeneratorLi9He8.hh  BxGeneratorLi9He8Messenger.hh  BxGeneratorMultiEvent.hh  BxGeneratorMultiEventMessenger.hh  BxGeneratorNeutrinoC13.hh  BxGeneratorNeutrinoC13Messenger.hh  BxGeneratorPositronium.hh  BxGeneratorPositroniumMessenger.hh  BxGeneratorRDMDecayGun.hh  BxGeneratorRDMDecayGunMessenger.hh  BxGeneratorRDMNucleus.hh  BxGeneratorRDMUIcmdWithNucleusAndUnit.hh  BxGeneratorSCS.hh  BxGeneratorSCSMessenger.hh  BxGeneratorSolarNeutrino.hh  BxGeneratorSolarNeutrino2.hh  BxGeneratorSolarNeutrino2Messenger.hh  BxGeneratorSolarNeutrinoMessenger.hh  BxGeneratorSterileAntiNu.hh  BxGeneratorSterileAntiNuMessenger.hh  BxGeneratorSupernovaAntiNu.hh  BxGeneratorSupernovaAntiNuMessenger.hh  BxIO.hh  BxInputVertex.hh  BxLightSource.hh  (+34 more)
include/CVS/: Entries  Repository
src/: .directory  AmVis.mac  BxActionInitialization.cc  BxCerenkov.cc  BxChamberParameterization.cc  BxDataCollection.cc  BxDetectorConstruction.cc  BxDetectorConstructionMessenger.cc  BxEventAction.cc  BxEventActionMessenger.cc  BxG4BxReader.cc  BxGeneratorAmBeSource.cc  BxGeneratorAmBeSourceMessenger.cc  BxGeneratorAntiNeutrino.cc  BxGeneratorAntiNeutrinoMessenger.cc  BxGeneratorG4Gun.cc  BxGeneratorG4GunMessenger.cc  BxGeneratorLi9He8.cc  BxGeneratorLi9He8Messenger.cc  BxGeneratorMultiEvent.cc  BxGeneratorMultiEventMessenger.cc  BxGeneratorNeutrinoC13.cc  BxGeneratorNeutrinoC13Messenger.cc  BxGeneratorPositronium.cc  BxGeneratorPositroniumMessenger.cc  BxGeneratorRDMDecayGun.cc  BxGeneratorRDMDecayGunMessenger.cc  BxGeneratorRDMNucleus.cc  BxGeneratorRDMUIcmdWithNucleusAndUnit.cc  BxGeneratorSCS.cc  BxGeneratorSCSMessenger.cc  BxGeneratorSolarNeutrino.cc  BxGeneratorSolarNeutrino2.cc  BxGeneratorSolarNeutrino2Messenger.cc  BxGeneratorSolarNeutrinoMessenger.cc  BxGeneratorSterileAntiNu.cc  BxGeneratorSterileAntiNuMessenger.cc  BxGeneratorSupernovaAntiNu.cc  BxGeneratorSupernovaAntiNuMessenger.cc  BxIO.cc  (+38 more)
src/CVS/: Entries  Repository  Root
(+4 files in other folders)
